--- a/src/auth/negotiate/kerberos/Makefile.am
+++ b/src/auth/negotiate/kerberos/Makefile.am
@@ -27,8 +27,8 @@ negotiate_kerberos_auth_LDADD= \
 	$(COMPAT_LIB) \
 	$(LIBGSS_LIBS) \
 	$(LIBHEIMDAL_KRB5_LIBS) \
+	$(LIBMIT_KRB5_LIBS) \
 	$(LIBNETTLE_LIBS) \
-	$(KRB5LIBS) \
 	$(XTRA_LIBS)
 
 negotiate_kerberos_auth_test_SOURCES = \
@@ -38,8 +38,8 @@ negotiate_kerberos_auth_test_LDADD= \
 	$(COMPAT_LIB) \
 	$(LIBGSS_LIBS) \
 	$(LIBHEIMDAL_KRB5_LIBS) \
+	$(LIBMIT_KRB5_LIBS) \
 	$(LIBNETTLE_LIBS) \
-	$(KRB5LIBS) \
 	$(XTRA_LIBS)
 
 man_MANS= negotiate_kerberos_auth.8
