Maintenance: update --with-ldap detection
Remove Mosilla LDAP SDK support which has
apparently not been maintained since 2017.

--- a/configure.ac
+++ b/configure.ac
@@ -1219,33 +1219,19 @@ SQUID_CHECK_LIB_WORKS(gss,[
 ])
 
 SQUID_AUTO_LIB(ldap,[LDAP],[LIBLDAP])
+dnl On MinGW set Windows LDAP libraries using -lwldap32
+AS_IF([test "x$with_ldap" != "xno" -a "$squid_host_os" = "mingw"],[
+  LIBLDAP_LIBS="$LIBLDAP_LIBS -lwldap32"
+])
 SQUID_CHECK_LIB_WORKS(ldap,[
-  dnl On MinGW OpenLDAP is not available, so LDAP helpers can be linked
-  dnl only with Windows LDAP libraries using -lwldap32
-  AS_IF([test "$squid_host_os" = "mingw"],[
-    LIBLDAP_LIBS="-lwldap32"
-  ],[
-    SQUID_STATE_SAVE(squid_ldap_state)
-    LIBS="$LIBLDAP_PATH $LIBPTHREADS $LIBS"
-    PKG_CHECK_MODULES([LIBLDAP],[ldap],[],[
-      AC_CHECK_LIB(lber, ber_init, [LIBLBER="-llber"])
-      AC_CHECK_LIB(ldap, ldap_init, [LIBLDAP_LIBS="-lldap $LIBLBER"])
-      dnl if no ldap lib found check for mozilla version
-      AS_IF([test "x$ac_cv_lib_ldap_ldap_init" != "xyes"],[
-        SQUID_STATE_SAVE(squid_ldap_mozilla)
-        LIBS="$LIBLDAP_PATH $LIBPTHREADS"
-        AC_CHECK_LIB(ldap60, ldap_init, [LIBLDAP_LIBS="-lldap60 $LIBLBER"])
-        LIBS="$LIBLDAP_PATH $LIBLDAP_LIBS $LIBPTHREADS"
-        AC_CHECK_LIB(prldap60, prldap_init, [LIBLDAP_LIBS="-lprldap60 $LIBLDAP_LIBS"])
-        LIBS="$LIBLDAP_PATH $LIBLDAP_LIBS $LIBPTHREADS"
-        AC_CHECK_LIB(ssldap60, ldapssl_init, [LIBLDAP_LIBS="-lssldap60 $LIBLDAP_LIBS"])
-        SQUID_STATE_ROLLBACK(squid_ldap_mozilla)
-      ])
-    ])
-    AC_CHECK_HEADERS(ldap.h lber.h)
-    AC_CHECK_HEADERS(mozldap/ldap.h)
+  SQUID_STATE_SAVE(squid_ldap_state)
+  LIBS="$LIBLDAP_PATH $LIBPTHREADS $LIBS"
+  PKG_CHECK_MODULES([LIBLDAP],[ldap],[:],[:])
+  AS_IF([test "x$LIBLDAP_LIBS" != "x"],[
+    AC_CHECK_HEADERS(ldap.h lber.h winldap.h)
     SQUID_CHECK_LDAP_API
   ])
+  SQUID_STATE_ROLLBACK(squid_ldap_state)
 ])
 
 SQUID_AUTO_LIB(systemd,[systemd API for start-up notification],[LIBSYSTEMD])
