--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -530,10 +530,10 @@ squid_LDADD = \
 	$(SSLLIB) \
 	$(EPOLL_LIBS) \
 	$(MINGW_LIBS) \
-	$(KRB5LIBS) \
 	$(LIBSYSTEMD_LIBS) \
 	$(COMPAT_LIB) \
 	$(LIBGSS_LIBS) \
+	$(LIBMIT_KRB5_LIBS) \
 	$(LIBNETTLE_LIBS) \
 	$(LIBPSAPI_LIBS) \
 	$(XTRA_LIBS)
@@ -548,10 +548,6 @@ squid_LDFLAGS = -export-dynamic -dlopen force
 ## LTDL headers require their local include path...
 AM_CPPFLAGS += $(INCLTDL)
 endif
-
-## Kerberos libraries require their include path...
-AM_CPPFLAGS += $(KRB5INCS)
-
 
 unlinkd_SOURCES = unlinkd_daemon.cc
 unlinkd_LDADD = \
@@ -1985,11 +1981,11 @@ tests_test_http_range_LDADD = \
 	$(LIBHEIMDAL_KRB5_LIBS) \
 	$(REGEXLIB) \
 	$(SSLLIB) \
-	$(KRB5LIBS) \
 	$(LIBCPPUNIT_LIBS) \
 	$(LIBSYSTEMD_LIBS) \
 	$(COMPAT_LIB) \
 	$(LIBGSS_LIBS) \
+	$(LIBMIT_KRB5_LIBS) \
 	$(LIBNETTLE_LIBS) \
 	$(LIBPSAPI_LIBS) \
 	$(XTRA_LIBS)
@@ -2373,11 +2369,11 @@ tests_testHttpRequest_LDADD = \
 	$(LIBHEIMDAL_KRB5_LIBS) \
 	$(REGEXLIB) \
 	$(SSLLIB) \
-	$(KRB5LIBS) \
 	$(LIBCPPUNIT_LIBS) \
 	$(LIBSYSTEMD_LIBS) \
 	$(COMPAT_LIB) \
 	$(LIBGSS_LIBS) \
+	$(LIBMIT_KRB5_LIBS) \
 	$(LIBNETTLE_LIBS) \
 	$(LIBPSAPI_LIBS) \
 	$(XTRA_LIBS)
@@ -2672,11 +2668,11 @@ tests_testCacheManager_LDADD = \
 	$(LIBHEIMDAL_KRB5_LIBS) \
 	$(REGEXLIB) \
 	$(SSLLIB) \
-	$(KRB5LIBS) \
 	$(LIBCPPUNIT_LIBS) \
 	$(LIBSYSTEMD_LIBS) \
 	$(COMPAT_LIB) \
 	$(LIBGSS_LIBS) \
+	$(LIBMIT_KRB5_LIBS) \
 	$(LIBNETTLE_LIBS) \
 	$(LIBPSAPI_LIBS) \
 	$(XTRA_LIBS)
