Maintenance: update --with-cap detection

--- a/configure.ac
+++ b/configure.ac
@@ -2026,18 +2026,12 @@ SQUID_CHECK_LIB_WORKS(cap,[
   SQUID_STATE_SAVE(squid_libcap_state)
   CXXFLAGS="$LIBCAP_CFLAGS $CXXFLAGS"
   LDFLAGS="$LIBCAP_PATH $LDFLAGS"
-  PKG_CHECK_MODULES([LIBCAP],[libcap >= 2.09],[],[
-    # cap_clear_flag is the most recent libcap function we require
-    AC_CHECK_LIB([cap],[cap_clear_flag],[LIBCAP_LIBS="$LIBCAP_LIBS -lcap"])
-  ])
-  SQUID_CHECK_FUNCTIONAL_LIBCAP2
-  AC_MSG_NOTICE([libcap headers are ok: $squid_cv_sys_capability_works])
-  AS_IF([test "x$squid_cv_sys_capability_works" = "xno"],[LIBCAP_LIBS=""])
+  PKG_CHECK_MODULES([LIBCAP],[libcap >= 2.09],[
+    SQUID_CHECK_FUNCTIONAL_LIBCAP2
+    AC_MSG_NOTICE([libcap headers are ok: $squid_cv_sys_capability_works])
+    AS_IF([test "x$squid_cv_sys_capability_works" = "xno"],[LIBCAP_LIBS=""])
+  ],[:])
   SQUID_STATE_ROLLBACK(squid_libcap_state)
-
-  AS_IF([test "x$LIBCAP_LIBS" != "x"],[
-    AC_DEFINE(USE_LIBCAP,1,[Linux capabilities library support])
-  ])
 ])
 
 dnl Check for needed libraries
