--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -534,6 +534,7 @@ squid_LDADD = \
 	$(COMPAT_LIB) \
 	$(LIBGSS_LIBS) \
 	$(LIBMIT_KRB5_LIBS) \
+	$(LIBNETFILTER_CONNTRACK_LIBS) \
 	$(LIBNETTLE_LIBS) \
 	$(LIBPSAPI_LIBS) \
 	$(XTRA_LIBS)
@@ -1986,6 +1987,7 @@ tests_test_http_range_LDADD = \
 	$(COMPAT_LIB) \
 	$(LIBGSS_LIBS) \
 	$(LIBMIT_KRB5_LIBS) \
+	$(LIBNETFILTER_CONNTRACK_LIBS) \
 	$(LIBNETTLE_LIBS) \
 	$(LIBPSAPI_LIBS) \
 	$(XTRA_LIBS)
@@ -2374,6 +2376,7 @@ tests_testHttpRequest_LDADD = \
 	$(COMPAT_LIB) \
 	$(LIBGSS_LIBS) \
 	$(LIBMIT_KRB5_LIBS) \
+	$(LIBNETFILTER_CONNTRACK_LIBS) \
 	$(LIBNETTLE_LIBS) \
 	$(LIBPSAPI_LIBS) \
 	$(XTRA_LIBS)
@@ -2673,6 +2676,7 @@ tests_testCacheManager_LDADD = \
 	$(COMPAT_LIB) \
 	$(LIBGSS_LIBS) \
 	$(LIBMIT_KRB5_LIBS) \
+	$(LIBNETFILTER_CONNTRACK_LIBS) \
 	$(LIBNETTLE_LIBS) \
 	$(LIBPSAPI_LIBS) \
 	$(XTRA_LIBS)
