--- a/configure.ac
+++ b/configure.ac
@@ -830,18 +830,43 @@ AC_MSG_NOTICE([Enable ESI processor: ${enable_esi:=no (auto)}])
 
 # ESI support libraries: expat
 SQUID_AUTO_LIB(expat,[ESI expat library],[LIBEXPAT])
-SQUID_CHECK_LIB_WORKS(expat,[
-  PKG_CHECK_MODULES([LIBEXPAT],[expat],[:],[:])
+AS_IF([test "x$enable_esi" = "xyes" -a "x$with_expat" != "xno"],[
+  SQUID_STATE_SAVE(squid_expat_state)
+  PKG_CHECK_MODULES([LIBEXPAT],[expat],[],[
+    AC_CHECK_LIB([expat],[main],[LIBEXPAT_LIBS="-lexpat"])
+  ])
   CPPFLAGS="$LIBEXPAT_CFLAGS $CPPFLAGS"
   AC_CHECK_HEADERS(expat.h)
+  SQUID_STATE_ROLLBACK(squid_expat_state)
+  AS_IF([test "x$LIBEXPAT_LIBS" != "x"],[
+      LIBEXPAT_LIBS="$LIBEXPAT_PATH $LIBEXPAT_LIBS"
+      AC_DEFINE(HAVE_LIBEXPAT,1,[Define to 1 if you have the expat library])
+    ],
+    [test "x$with_expat" = "xyes"],[AC_MSG_ERROR([Required library expat not found.])],
+    [AC_MSG_NOTICE([Library expat not found.])]
+  )
 ])
 
 # ESI support libraries: xml2
 SQUID_AUTO_LIB(xml2,[ESI xml2 library],[LIBXML2])
-SQUID_CHECK_LIB_WORKS(xml2,[
-  PKG_CHECK_MODULES([LIBXML2],[libxml-2.0],[:],[:])
+AS_IF([test "x$enable_esi" = "xyes" -a "x$with_xml2" != "xno"],[
+  SQUID_STATE_SAVE([squid_libxml2_save])
+  PKG_CHECK_MODULES([LIBXML2],[libxml-2.0],[],[
+    AC_CHECK_LIB([xml2],[main],[LIBXML2_LIBS="$LIBXML2_PATH -lxml2"])
+  ])
   CPPFLAGS="$LIBXML2_CFLAGS $CPPFLAGS"
   AC_CHECK_HEADERS(libxml/parser.h libxml/HTMLparser.h libxml/HTMLtree.h)
+  SQUID_STATE_ROLLBACK([squid_libxml2_save])
+
+  AS_IF([test "x$LIBXML2_LIBS" != "x"],[
+    CPPFLAGS="$LIBXML2_CFLAGS $CPPFLAGS"
+    LIBXML2_LIBS="$LIBXML2_PATH $LIBXML2_LIBS"
+    AC_DEFINE(HAVE_LIBXML2,1,[Define to 1 if you have the xml2 library])
+  ],[test "x$with_xml2" = "xyes"],[
+    AC_MSG_ERROR([Required library xml2 not found])
+  ],[
+    AC_MSG_NOTICE([Library xml2 not found.])
+  ])
 ])
 
 AS_IF([test "x$enable_esi" = "xyes" -a "x$LIBXML2_LIBS" = "x" -a "x$LIBEXPAT_LIBS" = "x"],[
