--- a/src/auth/basic/SASL/Makefile.am
+++ b/src/auth/basic/SASL/Makefile.am
@@ -15,7 +15,7 @@ basic_sasl_auth_SOURCES = \
 basic_sasl_auth_LDADD= \
 	$(top_builddir)/lib/libmiscencoding.la \
 	$(COMPAT_LIB) \
-	$(LIBSASL) \
+	$(LIBSASL_LIBS) \
 	$(XTRA_LIBS)
 
 EXTRA_DIST= \
